master
- Mayhem
  Fix next/previous page keybinds.

2.36.8
- noface
  Added support for coloured IDs and post highlighting from the native 4chan extension.

2.36.7
- noface
  Added keybinds for math and eqn tags on /sci/.
  Added full image redirection to /mu/.
  Removed ArchiveLink redirection from /soc/ (URLs will still be redirected).
  Quick tags won't be inserted where not possible anymore (like spoilers on /g/).

2.36.6
- noface
  Improved checking for own post directly after posting. This should sort out a number of small hiccups.
  Fixed crossquotes not showing the correct archiver.
  Fixed yet another quirk in blank spoiler detection.

2.36.4
- noface
  Added support for posting with QR and tags on /f/.
  Added redirection for /c/ and /po/.
  Fixed spoiler detection not working on rare occasions.

2.36.3
- noface
  Added keybind to toggle the hide status of the QR.
  If Persistent QR is enabled the close keybind will only hide the QR.
  Fix Linkify not detecting blank spoiler tags.
  Readded 'Check for Update' which is now much less obstrusive.

2.36.2
- noface
  Per-board archivers can now be selected under the rice tab.
- Mayhem
  Added possibility to display unix timestamps with File Info Formatting.

2.36.1
- noface
  Archives now populate a submenu just like the quicklinks for the Filter.

2.36.0
- noface
  Updater should now check until own post is found.
  "Don't expand spoilers when using ImageExpand" should now work as expected and gets a new option.
  postContainer now adds a class 'hidden' when the stub is hidden.

2.35.9
- Mayhem
  Added thread creation QR cooldown.
  Fix QR cooldown timer between non-sage and sage posts. You can submit a non-sage post 30 seconds after a sage one.
  Fix /q/ QR cooldowns.
- zixaphir
  Youtube Embedding
  Per board refresh intervals.
- noface
  Small Fixes.

2.35.8
- noface
  Don't break optional increase.

2.35.7
- noface
  It is now possible to set an interval.